# kmonad

./: README.md  hie.yaml  kmonad.cabal  scratch.hs
.github/workflows/: build-prerelease.yml
OS/: IO.hs  Linux.hs  Test.hs  Types.hs  Windows.hs
OS/Linux/: IO.hs  Types.hs
OS/Linux/IO/: Evdev.hs  Uinput.hs
Sketch/: Model.hs  WorkingDraft.hs
app/: Main.hs
c_src/: keyio.c
notes/: initial.note
src/: KMonad.hs  Scratch.hs
src/..old_src/KMonad/Keyboard/Linux/: Evdev.hs  Types.hs  UinputSink.hs
src/KMonad/: App.hs  Cmd.hs  Engine.hs  Main.hs  Model.hs  Prelude.hs  prelude.note
src/KMonad/App/: CfgFiles.hs  Invocation.hs  KeyIO.hs  Logging.hs  Main.hs  Parser.hs  Types.hs  app.note
src/KMonad/App/Invocation/: IO.hs  Parser.hs  Types.hs
src/KMonad/App/KeyIO/: Common.hs  Linux.hs  LogPut.hs  Names.hs  Notes.hs  Operations.hs  Test.hs  Types.hs  keyio.note
src/KMonad/App/KeyIO/Common/: Types.hs
src/KMonad/App/KeyIO/Linux/: Common.hs  Types.hs  Uinput.hs
src/KMonad/App/KeyIO/Mac/: Common.hs
src/KMonad/App/KeyIO/Test/: ListGet.hs  LogPut.hs
src/KMonad/App/KeyIO/Windows/: Common.hs
src/KMonad/App/Logging/: IO.hs  Notes.hs
src/KMonad/App/Main/: Loop.hs  Types.hs
src/KMonad/App/Model/: Types.hs
src/KMonad/App/Parser/: Elements.hs  Types.hs
src/KMonad/Keyboard/: Linux.hs  Types.hs
src/KMonad/Keyboard/Linux/: Uinput.hs
src/KMonad/Object/: Context.hs  Name.hs  Stream.hs  Time.hs  TimeStream.hs  object.note
src/KMonad/Object/Context/: Notes.hs  Operations.hs  Types.hs
src/KMonad/Object/Stream/: IO.hs  Notes.hs  OfTime.hs  Operations.hs  Types.hs
src/KMonad/Object/Time/: IO.hs  Notes.hs  Operations.hs  Types.hs
src/KMonad/Prelude/: Parser.hs  Types.hs  Util.hs
src/KMonad/Prelude/Parser/: Operations.hs  Types.hs  parser.note
src_bak/KMonad/: Cmd.hs  Core.hs  Main.hs  Overview.hs  Parser.hs  Prelude.hs  Types.hs
src_bak/KMonad/App/: Context.hs  Env.hs  Handler.hs  KeyIO.hs  Logging.hs  Signal.hs  Signals.hs  SignalsNotes.hs  Types.hs
src_bak/KMonad/App/Signal/: Example.hs  Notes.hs
src_bak/KMonad/Core/: Time.hs
src_bak/KMonad/Logic/: Match.hs  Stream.hs
src_bak/KMonad/Logic/Match/: Notes.hs
src_bak/KMonad/Logic/Match/Notes/: Tests.hs
src_bak/KMonad/Prelude/: Example.hs  Util.hs
