cabal-version: 2.2

name:           kmonad
category:       Application
version:        0.4.1
synopsis:       Advanced keyboard remapping utility
author:         David Janssen
maintainer:     janssen.dhj@gmail.com
license:        MIT
license-file:   LICENSE
build-type:     Simple
description:
  KMonad is a cross-platform command-line utility that runs as a daemon. It
  captures keyboard input (exactly how depends on the OS) and remaps it. The
  mapping is highly configurable, and provides options like (transparent) layer
  overlays, tap-mod buttons, multi-tap buttons, leader-key style buttons, and
  keyboard macros. Functionality heavily inspired by the QMK-firmware.

extra-source-files:
    changelog.md

library
  default-language:
      Haskell2010
  hs-source-dirs:
      src
  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Wno-unused-imports
  build-depends:
      base
    , cereal
    , comonad
    , exceptions
    -- , contravariant
    , lens
    , megaparsec
    , mtl
    , optparse-applicative
    -- , resourcet
    , rio
    -- , safe-exceptions
    , time
    , unliftio
  if os(linux)
    build-depends:
      unix
    c-sources:
      c_src/keyio.c
  default-extensions:
      ConstraintKinds
      -- DeriveFunctor
      -- DeriveGeneric
      -- DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GeneralizedNewtypeDeriving
      GADTs
      LambdaCase
      MultiParamTypeClasses
      -- MultiWayIf
      NoImplicitPrelude
      OverloadedStrings
      RankNTypes
      ScopedTypeVariables
      TemplateHaskell
      TupleSections
      TypeFamilies

  exposed-modules:
    KMonad

    KMonad.App.Invocation
    KMonad.App.Invocation.Parser
    KMonad.App.Invocation.IO
    KMonad.App.Invocation.Types

    KMonad.App.Logging
    KMonad.App.Logging.IO
    KMonad.App.Logging.Types

    KMonad.App.Main

    KMonad.Prelude
    KMonad.Prelude.Types
    KMonad.Prelude.Util

    -- KMonad.Cmd
    -- KMonad.Core
    -- KMonad.Prelude
    -- KMonad.Main

  -- if os(linux)
  --   exposed-modules:
  --     KMonad.Keyboard.Linux.Keycode
  --     KMonad.Keyboard.Linux.Types
  --     KMonad.Keyboard.Linux.IO.DeviceSource
  --     KMonad.Keyboard.Linux.IO.UinputSink
  --   c-sources:
  --     c_src/keyio.c
  --   build-depends:
  --     unix

  -- if os(windows)
  --   exposed-modules:
  --     KMonad.Keyboard.Windows.Keycode
  --     KMonad.Keyboard.Windows.Types
  --     KMonad.Keyboard.Windows.IO.LowLevelHookSource
  --     KMonad.Keyboard.Windows.IO.SendEventSink
  --   c-sources:
  --     c_src/keyio_win.c
  --   build-depends:
  --     Win32

  -- if os(darwin)
  --   exposed-modules:
  --     KMonad.Keyboard.IO.Mac.IOKitSource
  --     KMonad.Keyboard.IO.Mac.KextSink
  --     KMonad.Keyboard.IO.Mac.Types
  --   cxx-sources:
  --     c_src/mac/keyio_mac.cpp
  --   cxx-options:
  --     -std=c++14
  --   -- Commenting out, interferes with Hackage
  --   -- include-dirs:
  --   --   c_src/mac/Karabiner-VirtualHIDDevice/dist/include
  --   extra-libraries:
  --     c++
  --   build-depends:
  --     unix
  --   frameworks:
  --     CoreFoundation
  --     IOKit

executable kmonad
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
  main-is:
      Main.hs
  default-language:
      Haskell2010
  hs-source-dirs:
      app
  build-depends:
      base
    , kmonad
